--- a/losestreak.html
+++ b/losestreak.html
@@ -108,6 +108,18 @@
           <a href="index.html" class="text-center d-block mb-2 text-warning"
             >Kembali ke home</a
           >
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4888676909048422"
+     crossorigin="anonymous"></script>
+<!-- Sticky -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4888676909048422"
+     data-ad-slot="6885532072"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
           <div class="d-flex justify-content-center sosmed">
             <a class="mx-4" href="https://github.com/johsteven" target="_blank">
