--- a/index.html
+++ b/index.html
@@ -117,6 +117,18 @@
             class="text-center d-block mb-2 text-warning"
             >Hitung WR dengan lose streak</a
           >
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4888676909048422"
+     crossorigin="anonymous"></script>
+<!-- Sticky -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4888676909048422"
+     data-ad-slot="6885532072"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
           <div class="d-flex justify-content-center sosmed">
             <a class="mx-4" href="https://github.com/johsteven" target="_blank">
