--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="col-lg-6 col-md-9 col-sm-9">
           <div class="text-center mb-3 d-flex flex-column align-items-center">
-            <a href="https://www.wyvorz.com/" target="_blank">
+            <a href="https://www.scriptmlbb.com/" target="_blank">
               <img
                 class="logo-img"
                 src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh0WRu7QhrLW0eWzRSs6UYcKnQX6PXm3FdzitemYN7Ggk-5HjUSf96HzpvLDAKTm6S11BhNLUuM_voosCRPBGC8rzwFGm16j5_KdbeKcJfA4QvC7sVZnSmnNBH-vJEH4An4sa1Z4IdnwrbHdjfau9IMLsKxOC1ALgAcaGK3zUwL7deID3ijT5WBJ-C9Vg/s320/icons8-wrauter-color-180.png"
