--- a/winlose.html
+++ b/winlose.html
@@ -33,7 +33,7 @@
     />
     <link
       rel="shortcut icon"
-      href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh0WRu7QhrLW0eWzRSs6UYcKnQX6PXm3FdzitemYN7Ggk-5HjUSf96HzpvLDAKTm6S11BhNLUuM_voosCRPBGC8rzwFGm16j5_KdbeKcJfA4QvC7sVZnSmnNBH-vJEH4An4sa1Z4IdnwrbHdjfau9IMLsKxOC1ALgAcaGK3zUwL7deID3ijT5WBJ-C9Vg/s320/icons8-wrauter-color-180.png"
+      href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhGdMdqeWPuzVivq_vixKQViBAEU5GmAU_XJzoN3GFWiXmk-CC9-KNl94m6c715HD-faQlGDEtxY4j7NKA1UGE9qhfCoMCKV5JT8uslTYvACMrNaiMIFZvBdzHNMR03xEce5SjpBQ1-wvmeI81FB_JLJ8Qjul1OKXaaISIr65VTw7Y77zCGOFc6A-qmMw/s1600/icons8-code-folder-color-96.png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -53,7 +53,7 @@
             <a href="https://scriptmlbb.com/" target="_blank">
               <img
                 class="logo-img"
-                src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh0WRu7QhrLW0eWzRSs6UYcKnQX6PXm3FdzitemYN7Ggk-5HjUSf96HzpvLDAKTm6S11BhNLUuM_voosCRPBGC8rzwFGm16j5_KdbeKcJfA4QvC7sVZnSmnNBH-vJEH4An4sa1Z4IdnwrbHdjfau9IMLsKxOC1ALgAcaGK3zUwL7deID3ijT5WBJ-C9Vg/s320/icons8-wrauter-color-180.png"
+                src="https://cdn.jsdelivr.net/gh/rizal-x415ap/logo/logo.svg"
               />
             </a>
           </div>
