--- a/index.html
+++ b/index.html
@@ -136,7 +136,117 @@
             </a>
           </div>
           <hr class="mt-5" />
-          <p class="text-center mb-0">Copyright &copy; 2021 Steven Johannes</p>
+          <h2>Menghitung Win Rate (WR) dengan Cepat dan Tepat!</h2>
+<p>
+  Hai para pemain Mobile Legends yang hebat! Kami hadir dengan kabar gembira
+  untukmu! Kali ini, kami akan membahas kalkulator WR Mobile Legend yang bisa
+  membantumu mengukur persentase kemenangan saat bermain hero favoritmu. Jadi,
+  kamu bisa tampil lebih percaya diri dan semakin menjadi legenda di dalam
+  permainan!
+</p>
+<h2>Cara Manual untuk Menghitung WR</h2>
+<p>
+  Mungkin selama ini kamu masih menggunakan cara manual untuk menghitung WR,
+  bukan? Dengan melihat jumlah total pertandingan dan jumlah kemenangan, lalu
+  menghitung persentasenya. Nah, tenang saja, itu adalah cara lama! Sekarang
+  saatnya beralih ke metode yang lebih canggih dan presisi!
+</p>
+<h2>Penghitung Winrate Mobile Legends</h2>
+<p>
+  Inilah saatnya memperkenalkan
+  <strong>"Penghitung WR Mobile Legends"</strong> yang akan merubah cara pandangmu
+  tentang menghitung WR di Mobile Legends. Alat canggih ini akan menghemat waktu
+  berharga kamu dengan hasil yang lebih akurat dan tepat!
+</p>
+<h3>Mengapa Harus Menggunakan Winrate ML Calculator?</h3>
+<p>
+  Kamu pasti penasaran, apa sih keunggulan kalkulator WR yang satu ini? Yuk,
+  simak beberapa alasan mengapa Winrate ML Calculator adalah pilihan yang
+  cerdas:
+</p>
+<ol>
+  <li>
+    <p>
+      <strong>Keakuratan Tinggi:</strong> Berkat teknologi canggih, kalkulator
+      ini memberikan hasil yang sangat akurat, jauh dari perhitungan manual yang
+      rawan kesalahan.
+    </p>
+  </li>
+  <li>
+    <p>
+      <strong>Efisiensi Waktu:</strong> Dalam sekejap mata, kamu akan
+      mendapatkan hasil WR dengan cepat. Artinya, lebih banyak waktu untuk
+      bermain dan meningkatkan skill!
+    </p>
+  </li>
+  <li>
+    <p>
+      <strong>User-Friendly:</strong> Desainnya yang ramah pengguna memudahkan
+      siapa pun, bahkan pemula sekalipun, untuk menggunakannya dengan mudah.
+    </p>
+  </li>
+  <li>
+    <p>
+      <strong>Histori Pertandingan:</strong> Tak hanya itu, kalkulator ini akan
+      menyimpan histori pertandinganmu. Jadi, kamu bisa melacak kemajuan dan
+      melihat perkembangan WR seiring waktu.
+    </p>
+  </li>
+</ol>
+<h2>Tips untuk Meningkatkan Win Rate</h2>
+<p>
+  Kalkulator WR saja tidak cukup! Kami juga ingin memberikan beberapa tips
+  andalan agar kamu semakin mengasah kemampuan dan meraih kemenangan beruntun!
+</p>
+<h3>1. Kuasai Hero-Hero Pilihan</h3>
+<p>
+  Pilihlah beberapa hero yang sesuai dengan gaya bermainmu, lalu kuasai mereka
+  hingga ke ujung jari! Dengan mengandalkan hero-hemu yang sudah dikuasai,
+  performa kamu di medan perang akan semakin garang!
+</p>
+<h3>2. Bergabunglah dengan Pemain Berkualitas</h3>
+<p>
+  Bermainlah bersama tim yang memiliki skill dan kerjasama yang baik. Dengan
+  begitu, komunikasi lebih lancar, strategi lebih matang, dan kemenangan semakin
+  mudah diraih!
+</p>
+<h3>3. Gunakan META Heroes</h3>
+<p>
+  Selalu perhatikan META terkini dan gunakan hero-hero yang sedang naik daun.
+  META heroes memiliki keunggulan yang bisa membuatmu mendominasi jalannya
+  pertandingan.
+</p>
+<h3>4. Latihan Rutin Membawa Keajaiban</h3>
+<p>
+  Latihan adalah kunci kesuksesan! Rutin berlatih akan meningkatkan reflex,
+  kemampuan analisis, dan strategi permainanmu. Jadi, jangan malas untuk
+  berlatih setiap hari!
+</p>
+<h3>5. Classic Mode untuk Penguasaan Penuh</h3>
+<p>
+  Mainlah di Classic Mode untuk benar-benar menguasai hero terpilihmu. Tanpa
+  tekanan peringkat, kamu bisa bereksperimen dan menjadi jagoan yang tangguh!
+</p>
+<h2>Kalkulator Lain dari Scriptmlbb</h2>
+<p>
+  Tak hanya "Winrate ML Calculator," masih ada kalkulator lain  yang
+  bisa memudahkanmu dalam permainan Mobile Legends. Misalnya:
+</p>
+<ul>
+  <li>
+    <strong>Kalkulator Win Lose:</strong> Untuk menghitung Untuk Jumlah Kemenangan dan Kekalahan.
+  </li>
+  <li>
+    <strong>Kalkulator wr dengan losetreak:</strong> Untuk mencari tahu jumlah wr jika lostreak.
+  </li>
+</ul>
+<h2>Akhiri Pencarianmu, Pilih EXP Winrate ML Calculator!</h2>
+<p>
+  Jadi, tunggu apa lagi? Segera tinggalkan cara manual yang melelahkan dan
+  beralihlah ke kalkulator WR yang paling cerdas, Jadilah pemain Mobile Legends
+  yang semakin unggul dan tak terkalahkan!
+</p>
+
         </div>
       </div>
     </div>
